vlib/v/checker/tests/incorrect_name_function.out
vlib/v/checker/tests/incorrect_name_function.vv:1:1: error: function name `_my_fn` cannot start with `_`
    1 | fn _my_fn() {}
      | ~~~~~~~~~~~