vlib/v/checker/tests/incorrect_name_function.vv
fn _my_fn() {}
